병원 예약 로직 강화 & UI/UX 개선